--- a/style.css
+++ b/style.css
@@ -172,40 +172,40 @@ a:hover
 
 
     h1
-        {
-        	font-size: 300%;
-        	text-indent: 4%;
-        	text-align: center;
+    {
+        font-size: 300%;
+        text-indent: 4%;
+    	text-align: center;
 
-        }
+    }
     body
-        {
-            font-family: Lora,Arial,Friends,sans-serif;
-        }
+    {
+    	font-family: Lora,Arial,Friends,sans-serif;
+    }
      
 	header
-		{
-			height: 80%
-		}
+	{
+		height: 80%
+	}
 	main 
-		{
-			padding-top: 60px;
-			margin-bottom:65%		
-		}
+	{
+		padding-top: 60px;
+		margin-bottom:65%		
+	}
 
 
 	footer
-		{
-			background-color:rgb(3, 140, 140);
-			opacity: 0.9;
-		    padding: 10px;
+	{
+		background-color:rgb(3, 140, 140);
+		opacity: 0.9;
+		padding: 10px;
 
-		}
-    nav {
-  position: sticky;
-  top: 0;
-  background-color: white;
-}
+	}
+    nav 
+    {
+  		position: sticky;
+ 		top: 0;
+	}
 
 
      .hopitalTivoli,.hopitalHUDERF
@@ -231,7 +231,6 @@ a:hover
 		width: 15%;
 		position: sticky;
   		top: 10%;
-  		background-color: white;
 	}
 
 	.conteneur p
