--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
 
 *
 {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
 .container
@@ -42,6 +44,10 @@
 	border-radius: 50px;
 	margin: 10px;
 }
+.element a
+{
+	color: white;
+}
 .ensemble
 {
 	display: flex;
@@ -50,11 +56,16 @@
 }
 .objet
 {
-	color: black;
+	color: white;
+	border: double 3px;
 	padding: 10px;
-	border-radius: 50px;
+	border-radius: 40px 15px 40px 15px;
 	margin: 10px;
 
+}
+.objet a
+{
+	color: white;
 }
 .image
 {
@@ -113,10 +124,16 @@ main
 	padding: 4%;
 	argin-bottom: 20px;
 }
+article
+{
+	margin-bottom: 20px;
+}
 
 
 footer
 {
+	margin-top: 50px;
+    padding-top: 20px;
 	background-color:rgb(3, 140, 140);
 	opacity: 0.9;
     padding: 15px;
@@ -265,4 +282,21 @@ a:hover
   {
   	background-color: black;
   }
+   .element a
+  {
+	color: black;
+  }
+  .objet
+  {
+	color: black;
+  }
+  .objet a
+  {
+	color: black;
+  }
+   .objet p
+  {
+	color: black;
+  }
 }
+ 
